--- a/app/StudentPortal/app/views/index.scala.html
+++ b/app/StudentPortal/app/views/index.scala.html
@@ -1,7 +1,17 @@
 @(message: String)
 
-@main("Welcome to Play") {
-
-    @play20.welcome(message, style = "Java")
+@main("IT Student Portal") {
 
 }
+
+<!DOCTYPE html>
+
+<html lang="en">
+    <head>
+        <title>@main</title>    
+    </head>
+    <body>
+        @message
+        
+    </body>
+</html>
