Prasyarat Netbeans to Play v 0.1

--- a/app/StudentPortal/app/views/home.scala.html
+++ b/app/StudentPortal/app/views/home.scala.html
@@ -12,6 +12,6 @@
     </head>
     <body>
         @message
-        
+        <a href="@routes.Application.prasyarat()">Prasyarat</a>
     </body>
 </html>
