--- a/app/StudentPortal/app/views/home.scala.html
+++ b/app/StudentPortal/app/views/home.scala.html
@@ -11,7 +11,10 @@
         <title>@main</title>    
     </head>
     <body>
-        @message
+        @message 
+        <br>
         <a href="@routes.Application.prasyarat()">Prasyarat</a>
+        <br>
+        <a href="@routes.Application.logout()">Logout</a>
     </body>
 </html>
