Menambahkan Session dan login check

--- a/app/StudentPortal/app/views/index.scala.html
+++ b/app/StudentPortal/app/views/index.scala.html
@@ -1,14 +1,10 @@
 @(message: String)
 
-@main("IT Student Portal") {
-
-}
-
 <!DOCTYPE html>
 
 <html lang="en">
     <head>
-        <title>@main</title>    
+        <title>IT Student Portal</title>    
     </head>
     <body>
         @message
