--- a/app/StudentPortal/app/views/login.scala.html
+++ b/app/StudentPortal/app/views/login.scala.html
@@ -1,3 +1,5 @@
+@(message: String)
+
 <!doctype html>
 <html>
 	<head>
@@ -8,12 +10,14 @@
 		<h3>Login</h3>
 		<form action="@routes.Application.submitLogin()" method="POST" name ="loginForm">
 			Email: <br>
-			<input name="npm" type="email" placeholder="contoh: 7312012(at)student.unpar.ac.id"/>
+			<input name="email" type="email" placeholder="contoh: 7312012&#64;student.unpar.ac.id"/>
 			<br>
 			Password:
 			<br>
 			<input name="pass" type="password" placeholder="********"/>
+			<br>
 			<input name="submit" type="submit" value="login"/>
+			<p>@message</p>
 		</form>
 	</body>
 </html>
