--- a/app/StudentPortal/app/views/login.scala.html
+++ b/app/StudentPortal/app/views/login.scala.html
@@ -4,20 +4,61 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>IT Student Portal</title>
+
+		<!-- CSS -->
+        <link rel="stylesheet" href="@routes.Assets.versioned("bootstrap/css/bootstrap.min.css")">
+        <link rel="stylesheet" href="@routes.Assets.versioned("stylesheets/main.css")">
+        
 	</head>
-	<body>
-		<h3>Login</h3>
-		<form action="@routes.Application.submitLogin()" method="POST" name ="loginForm">
-			Email: <br>
-			<input name="email" type="email" placeholder="contoh: 7312012&#64;student.unpar.ac.id"/>
-			<br>
-			Password:
-			<br>
-			<input name="pass" type="password" placeholder="********"/>
-			<br>
-			<input name="submit" type="submit" value="login"/>
-			<p>@message</p>
-		</form>
+	
+	<body id="login-body">
+	    <div class="container">
+			<div class="row">
+				<div class="col-md-4"></div>
+				<div class="col-md-4">
+					<div class="panel panel-default">
+						<div class="panel-body">
+							<div class="page-header">
+								<center>
+								<div class="logo-set">
+									<img src="@routes.Assets.versioned("images/logo-unpar.png")" width="120px" height="120px"/>
+									<img src="@routes.Assets.versioned("images/logo-unpar.png")" width="120px" height="120px"/>
+								</div>
+								</center>
+								<h2 class="text-center">IT Student Portal</h2> 
+								<h5 class="text-center">Portal Akademik Mahasiswa</h5>
+								<h5 class="text-center">Teknik Informatika UNPAR</h5>
+							</div>
+							<form action="@routes.Application.submitLogin()" method="POST" name ="loginForm">
+								<div class="form-group">
+									<label for="email-input">Email</label> 
+									<div class="input-group">
+										<input name="email" type="email" class="form-control" id="email-input" placeholder="co: 7312012&#64;student.unpar.ac.id"/>
+										<span class="input-group-addon"><span class="glyphicon glyphicon-user"></span>
+									</div>
+								</div>
+								<div class="form-group">
+									<label for="pw-input">Password</label> 
+									<div class="input-group">
+										<input name="pass" type="password" class="form-control" id="pw-input" placeholder="********"/>
+										<span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span>
+									</div>
+								</div>
+								<p class="text-center error-message">@message</p>
+								<button name="submit" type="submit" class="form-control">Login <span class="glyphicon glyphicon-log-in"></span></button>
+							</form>
+						</div>	
+					</div>										
+				</div>
+				<div class="col-md-4"></div>
+			</div>
+		</div>
+		<!-- Javascript -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+		<script src="@routes.Assets.versioned("bootstrap/js/bootstrap.min.js")></script>
+
 	</body>
 </html>
