--- a/app/StudentPortal/app/views/login.scala.html
+++ b/app/StudentPortal/app/views/login.scala.html
@@ -15,7 +15,7 @@
 	</head>
 	
 	<body id="login-body">
-	    <div class="container">
+	    <div class="container" id="login-container">
 			<div class="row">
 				<div class="col-md-4"></div>
 				<div class="col-md-4">
