--- a/app/StudentPortal/app/views/home.scala.html
+++ b/app/StudentPortal/app/views/home.scala.html
@@ -14,26 +14,58 @@
         <link rel="stylesheet" href="@routes.Assets.versioned("stylesheets/main.css")"> 
     </head>
     <body>
-		<div id="sidebar" class="toggled">
-			<h3 class="text-center">IT Student Portal</h3>
-			<ul>
-				<li><a href="@routes.Application.prasyarat()"><span class="glyphicon glyphicon-tasks"></span> Prasyarat Mata Kuliah</a></li>
-				<li><a><span class="glyphicon glyphicon-list-alt"></span> Jadwal</a>
-					<ul>
-						<li><a href="@routes.Application.prasyarat()"><span class="glyphicon glyphicon-calendar"></span> Jadwal Kuliah</a></li>
-						<li><a href="@routes.Application.prasyarat()"><span class="glyphicon glyphicon-calendar"></span> Jadwal UTS</a></li>
-						<li><a href="@routes.Application.prasyarat()"><span class="glyphicon glyphicon-calendar"></span> Jadwal UAS</a></li>
+		<nav class="navbar navbar-inverse sidebar" role="navigation">
+			<div class="container-fluid">
+				<!-- Logo dan Toggle -->
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#sidebar-navbar-collapse">
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					<div class="logo-set">
+						<img src="@routes.Assets.versioned("images/logo-unpar.png")" width="25%" height="25%"/>
+						<img src="@routes.Assets.versioned("images/logo-unpar.png")" width="25%" height="25%"/>
+					</div>
+					<a class="navbar-brand">IT Student Portal</a>
+				</div>
+				<!-- Menu Navigasi -->
+				<div class="collapse navbar-collapse" id="sidebar-navbar-collapse">
+					<ul class="nav navbar-nav">
+						<li class="active"><a href="#">
+							Home<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-home"></span>
+						</a></li>
+						<li ><a href="@routes.Application.prasyarat()">
+							Prasyarat Mata Kuliah<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-tasks"></span>
+						</a></li>
+						<li class="dropdown">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown">
+								Jadwal<span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-list-alt"></span>
+							</a>
+							<ul class="dropdown-menu forAnimate" role="menu">
+								<li><a href="#">
+									<span style="font-size:16px;" class="hidden-xs showopacity glyphicon glyphicon-calendar"></span> Jadwal Kuliah 
+								</a></li>
+								<li><a href="#">
+									<span style="font-size:16px;" class="hidden-xs showopacity glyphicon glyphicon-calendar"></span> Jadwal UTS 
+								</a></li>
+								<li><a href="#">
+									<span style="font-size:16px;" class="hidden-xs showopacity glyphicon glyphicon-calendar"></span> Jadwal UAS
+								</a></li>
+							</ul>
+						</li>
+						<li ><a href="#">
+							Data Akademik<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-book"></span>
+						</a></li>
 					</ul>
-				</li>
-				<li><a href="@routes.Application.prasyarat()"><span class="glyphicon glyphicon-credit-card"></span> Ringkasan Data Akademik</a></li>
-			</ul>
-		</div>
-		
-		<div id="page-content" class="toggled">
+				</div>
+			</div>
+		</nav>
+		<div class="main">
+		<!-- Konten Halaman -->
 			<div class="container-fluid">
 				<div class="row">
                     <div class="col-lg-12">
-						<a id="toggle-menu"><</a>
 						<img src="@photoPath"/>
 						<br>
 						@nama 
@@ -43,19 +75,10 @@
                 </div>
 			</div>
 		</div>
-		
-        
-		
+
 		<!-- Javascript -->
 		<script src="@routes.Assets.versioned("javascripts/jquery-1.11.3.min.js")"></script>
-		<script>
-			$(document).ready(function(){
-				$("#toggle-menu").click(function(){
-					$("#sidebar").toggleClass("toggled");
-					$("#page-content").toggleClass("toggled");
-				});
-			});
-		</script>
+		<script src="@routes.Assets.versioned("javascripts/script.js")"></script>
 		<script src="@routes.Assets.versioned("bootstrap/js/bootstrap.min.js")"></script>
 		
     </body>
