--- a/app/StudentPortal/app/views/prasyarat.scala.html
+++ b/app/StudentPortal/app/views/prasyarat.scala.html
@@ -1,17 +1,105 @@
-@(list: List[models.display.PrasyaratDisplay])
+@(list: List[models.display.PrasyaratDisplay], semester: String)
 
 <!DOCTYPE html>
 
 <html lang="en">
     <head>
-        <title>IT Student Portal</title>    
+        <meta charset="UTF-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>IT Student Portal</title>
+
+		<!-- CSS -->
+        <link rel="stylesheet" href="@routes.Assets.versioned("bootstrap/css/bootstrap.min.css")">
+        <link rel="stylesheet" href="@routes.Assets.versioned("stylesheets/main.css")"> 
     </head>
     <body>
-     	<h1>Prasyarat</h1> 
-     	<ul>
-     	@for(ls<-list){
-     		<li><b>@ls.getMataKuliah().getKode() @ls.getMataKuliah().getNama():</b> @ls.getStatus</li> 		
-     	}
-     	</ul>
+		<nav class="navbar navbar-inverse sidebar" role="navigation">
+			<div class="container-fluid">
+				<!-- Logo dan Toggle -->
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#sidebar-navbar-collapse">
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					<div class="logo-set">
+						<img src="@routes.Assets.versioned("images/logo-unpar.png")" width="25%" height="25%"/>
+						<img src="@routes.Assets.versioned("images/logo-unpar.png")" width="25%" height="25%"/>
+					</div>
+					<a class="navbar-brand">IT Student Portal</a>
+				</div>
+				<!-- Menu Navigasi -->
+				<div class="collapse navbar-collapse" id="sidebar-navbar-collapse">
+					<ul class="nav navbar-nav">
+						<li ><a href="@routes.Application.home()">
+							Home<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-home"></span>
+						</a></li>
+						<li class="active"><a href="@routes.Application.prasyarat()">
+							Prasyarat Mata Kuliah<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-tasks"></span>
+						</a></li>
+						<li class="dropdown">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown">
+								Jadwal<span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-list-alt"></span>
+							</a>
+							<ul class="dropdown-menu forAnimate" role="menu">
+								<li><a href="#">
+									<span style="font-size:16px;" class="hidden-xs showopacity glyphicon glyphicon-calendar"></span> Jadwal Kuliah 
+								</a></li>
+								<li><a href="#">
+									<span style="font-size:16px;" class="hidden-xs showopacity glyphicon glyphicon-calendar"></span> Jadwal UTS 
+								</a></li>
+								<li><a href="#">
+									<span style="font-size:16px;" class="hidden-xs showopacity glyphicon glyphicon-calendar"></span> Jadwal UAS
+								</a></li>
+							</ul>
+						</li>
+						<li ><a href="#">
+							Data Akademik<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-book"></span>
+						</a></li>
+					</ul>
+				</div>
+			</div>
+		</nav>
+		<div class="main">
+		<!-- Konten Halaman -->
+			<div class="container-fluid">
+				<div class="row">
+                    <div class="col-lg-12">
+						<h1>Periksa Prasyarat Mata Kuliah</h1> 
+						<h3>Semester @semester</h3> 
+						<div class="table-responsive">
+						<table class="table table-bordered">
+						<thead>
+							<tr>
+								<th class="text-center" >Kode Mata Kuliah</th>
+								<th class="text-center" >Nama Mata Kuliah</th>
+								<th class="text-center" >Keterangan</th>
+							</tr>
+						</thead>
+						<tbody>
+						@for(ls<-list){
+							<tr>
+								<td rowspan="ls.getStatus().length-1">@ls.getMataKuliah().getKode()</td>
+								<td rowspan="ls.getStatus().length-1">@ls.getMataKuliah().getNama()</td>
+								@for(stat<-ls.getStatus()){
+									@if(!stat.isEmpty){
+										<td>@stat</td>
+									}
+								}
+							</tr>
+						}
+						</tbody>
+						</table>
+						</div>
+					</div>
+                </div>
+			</div>
+		</div>
+		
+		<!-- Javascript -->
+		<script src="@routes.Assets.versioned("javascripts/jquery-1.11.3.min.js")"></script>
+		<script src="@routes.Assets.versioned("javascripts/script.js")"></script>
+		<script src="@routes.Assets.versioned("bootstrap/js/bootstrap.min.js")"></script>
     </body>
 </html>
