--- a/app/StudentPortal/app/views/jadwalKuliah.scala.html
+++ b/app/StudentPortal/app/views/jadwalKuliah.scala.html
@@ -1,5 +1,3 @@
-@(nama: String, photoPath: String)
-
 <!DOCTYPE html>
 
 <html lang="en">
@@ -32,10 +30,10 @@
 				<!-- Menu Navigasi -->
 				<div class="collapse navbar-collapse" id="sidebar-navbar-collapse">
 					<ul class="nav navbar-nav">
-						<li class="active"><a href="@routes.Application.home()">
+						<li ><a href="@routes.Application.home()">
 							Home<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-home"></span>
 						</a></li>
-						<li ><a href="@routes.Application.prasyarat()">
+						<li><a href="@routes.Application.prasyarat()">
 							Prasyarat Mata Kuliah<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-tasks"></span>
 						</a></li>
 						<li class="dropdown">
@@ -43,7 +41,7 @@
 								Jadwal<span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-list-alt"></span>
 							</a>
 							<ul class="dropdown-menu forAnimate" role="menu">
-								<li><a href="@routes.Application.jadwalKuliah()">
+								<li class="active"><a href="#">
 									<span style="font-size:16px;" class="hidden-xs showopacity glyphicon glyphicon-calendar"></span> Jadwal Kuliah 
 								</a></li>
 								<li><a href="#">
@@ -64,22 +62,35 @@
 		<div class="main">
 		<!-- Konten Halaman -->
 			<div class="container-fluid">
-				<div class="row">
-                    <div class="col-lg-12">
-						<img src="@photoPath"/>
-						<br>
-						@nama 
-						<br>
-						<a href="@routes.Application.logout()">Logout</a>
-					</div>
-                </div>
+				<table>
+					<thead>
+						<tr>
+							<th>Senin</th>
+							<th>Selasa</th>
+							<th>Rabu</th>
+							<th>Kamis</th>
+							<th>Jumat</th>
+							<th>Sabtu</th>
+						</tr>
+					</thead>
+					<tbody>	
+					
+						@for(i <- 0 until 6) {
+							<tr>
+							@for(j <- 0 until 6) {
+								 <td>i</td>
+							}
+							</tr>
+						}
+						
+					</tbody>
+				</table>
 			</div>
 		</div>
-
+		
 		<!-- Javascript -->
 		<script src="@routes.Assets.versioned("javascripts/jquery-1.11.3.min.js")"></script>
 		<script src="@routes.Assets.versioned("javascripts/script.js")"></script>
 		<script src="@routes.Assets.versioned("bootstrap/js/bootstrap.min.js")"></script>
-		
     </body>
 </html>
