--- a/app/StudentPortal/app/views/prasyarat.scala.html
+++ b/app/StudentPortal/app/views/prasyarat.scala.html
@@ -46,15 +46,15 @@
 								<li><a href="@routes.Application.jadwalKuliah()">
 									<span style="font-size:16px;" class="hidden-xs showopacity glyphicon glyphicon-calendar"></span> Jadwal Kuliah 
 								</a></li>
-								<li><a href="#">
+								<li><a href="@routes.Application.jadwalUTS()">
 									<span style="font-size:16px;" class="hidden-xs showopacity glyphicon glyphicon-calendar"></span> Jadwal UTS 
 								</a></li>
-								<li><a href="#">
+								<li><a href="@routes.Application.jadwalUAS()">
 									<span style="font-size:16px;" class="hidden-xs showopacity glyphicon glyphicon-calendar"></span> Jadwal UAS
 								</a></li>
 							</ul>
 						</li>
-						<li ><a href="#">
+						<li ><a href="@routes.Application.ringkasan()">
 							Data Akademik<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-book"></span>
 						</a></li>
 					</ul>
