--- a/app/StudentPortal/app/views/ringkasan.scala.html
+++ b/app/StudentPortal/app/views/ringkasan.scala.html
@@ -1,4 +1,4 @@
-@(nama: String, photoPath: String)
+@(ringkasan: models.display.RingkasanDisplay)
 
 <!DOCTYPE html>
 
@@ -32,7 +32,7 @@
 				<!-- Menu Navigasi -->
 				<div class="collapse navbar-collapse" id="sidebar-navbar-collapse">
 					<ul class="nav navbar-nav">
-						<li class="active"><a href="@routes.Application.home()">
+						<li ><a href="@routes.Application.home()">
 							Home<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-home"></span>
 						</a></li>
 						<li ><a href="@routes.Application.prasyarat()">
@@ -46,15 +46,15 @@
 								<li><a href="@routes.Application.jadwalKuliah()">
 									<span style="font-size:16px;" class="hidden-xs showopacity glyphicon glyphicon-calendar"></span> Jadwal Kuliah 
 								</a></li>
-								<li><a href="#">
+								<li><a href="@routes.Application.jadwalUTS()">
 									<span style="font-size:16px;" class="hidden-xs showopacity glyphicon glyphicon-calendar"></span> Jadwal UTS 
 								</a></li>
-								<li><a href="#">
+								<li><a href="@routes.Application.jadwalUAS()">
 									<span style="font-size:16px;" class="hidden-xs showopacity glyphicon glyphicon-calendar"></span> Jadwal UAS
 								</a></li>
 							</ul>
 						</li>
-						<li ><a href="#">
+						<li class="active"><a href="@routes.Application.ringkasan()">
 							Data Akademik<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-book"></span>
 						</a></li>
 					</ul>
@@ -66,12 +66,36 @@
 			<div class="container-fluid">
 				<div class="row">
                     <div class="col-lg-12">
-						
+						IPS: @ringkasan.getIPS()<br>
+						IPK: @ringkasan.getIPK()<br>
+						sks lulus: @ringkasan.getSKSLulus()<br>
+						Sisa sks untuk kelulusan: @ringkasan.getMinSisaSKS()<br>
+						<h5>Pilihan Wajib</h5>
+						Lulus: <br>
+						@for(list<-ringkasan.getPilWajibLulus()){
+							@list @(models.id.ac.unpar.siamodels.MataKuliah.getMataKuliah(list).getNama())<br>
+						}
+						Belum lulus: <br>
+						@for(list<-ringkasan.getPilWajibBelumLulus()){
+							@list @(models.id.ac.unpar.siamodels.MataKuliah.getMataKuliah(list).getNama())<br>
+						}
+						@if(ringkasan.getPilWajib().length-ringkasan.getPilWajibBelumLulus().length>=4){
+							Sudah memenuhi syarat kelulusan pilihan wajib
+						}else{
+							Belum memenuhi syarat kelulusan pilihan wajib, minimal 
+							@(4-ringkasan.getPilWajibLulus().length)
+						}
+						<br>
 					</div>
                 </div>
 			</div>
 		</div>
-
+		<div>
+		Catatan bimbingan:
+		IPS ! semester terkakhir
+		Tabel kuliah
+		Server- Loginny cma buat 1 client??
+		</div>
 		<!-- Javascript -->
 		<script src="@routes.Assets.versioned("javascripts/jquery-1.11.3.min.js")"></script>
 		<script src="@routes.Assets.versioned("javascripts/script.js")"></script>
